many updations done

--- a/client/src/component/navBar/navBar.scss
+++ b/client/src/component/navBar/navBar.scss
@@ -40,6 +40,11 @@
                 line-height: 24px;
                 font-weight: bolder;
             }
+
+            .link{
+                color: white;
+                text-decoration: none;
+            }
         }
         li:hover{
             transform: scale(1.059);
