--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -50,7 +50,6 @@
             p{
                 margin: 0;
             }
-            span{}
             button{
                 background-color: white;
                 color: rebeccapurple;
@@ -88,9 +87,13 @@
                     background-color: rebeccapurple;
                     color: white;
                     font-weight: bold;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 10px;
                 }
             }
-            span{
+            .register-txt{
                 @media (min-width: 700px) {
                     display: none;
                 }
