--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -1,22 +1,27 @@
-.register{
+.register {
 
     background-color: #c1beff;
-    // display: flex;
-    // align-items: center;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+
     // justify-content: center;
-    .registerCard{
+    .registerCard {
         margin: auto;
 
-        @media (max-width:1200px){
+        @media (max-width:1200px) {
             width: 70%;
         }
-        @media (max-width:950px){
+
+        @media (max-width:950px) {
             width: 90%;
         }
-        @media(max-width : 700px){
+
+        @media(max-width : 700px) {
             width: 70%;
         }
-        @media(max-width : 400px){
+
+        @media(max-width : 400px) {
             width: 90%;
         }
 
@@ -30,14 +35,15 @@
         overflow: hidden;
         min-height: 500px;
 
-        .left{
-            @media (max-width: 700px){
+        .left {
+            @media (max-width: 700px) {
                 display: none;
             }
 
             flex: 1;
 
-            background: linear-gradient(rgba(39,11,96,0.5),rgba(39,11,96,0.5)) , url('https://i.pinimg.com/564x/09/a5/73/09a573ede3f8ae84c6f8657a50f8722d.jpg') ;
+            background: linear-gradient(rgba(39, 11, 96, 0.5), rgba(39, 11, 96, 0.5)),
+            url('https://i.pinimg.com/564x/09/a5/73/09a573ede3f8ae84c6f8657a50f8722d.jpg');
             background-size: cover;
             padding: 50px;
             display: flex;
@@ -45,23 +51,24 @@
             gap: 20px;
             color: white;
 
-            h1{
+            h1 {
                 margin: 0;
                 font-size: 80px;
                 line-height: 100px;
             }
-            p{
+
+            p {
                 margin: 0;
             }
-            span{}
-            button{
+
+            button {
                 background-color: white;
                 color: rebeccapurple;
                 font-weight: bold;
             }
         }
 
-        .right{
+        .right {
             @media (max-width: 600px) {
                 padding: 20px;
             }
@@ -73,49 +80,57 @@
             // flex-direction: column;
             // gap: 20px;
 
-            h1{
+            h1 {
                 margin: 0;
             }
-            form{
+
+            form {
                 // background-color: green;
                 margin: 0;
                 // display: flex;
                 // flex-direction: column;
                 // gap: 20px;
 
-                input{
+                input {
                     width: 100%;
                     margin-top: 20px;
                     border: none;
                     border-bottom: 1px solid lightgray;
-                    padding: 8px 10px; 
+                    padding: 8px 10px;
                 }
-                input:focus{
+
+                input:focus {
                     outline: none;
                 }
-                button{
+
+                button {
                     margin-top: 20px;
                     width: 100%;
                     padding: 10px;
                     background-color: rebeccapurple;
                     color: white;
                     font-weight: bold;
+
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 10px;
                 }
             }
-            // span{
-            //     @media (min-width: 700px) {
-            //         display: none;
-            //     }
-            // }
+
+            .login-txt {
+                @media (min-width: 700px) {
+                    display: none;
+                }
+            }
         }
     }
 }
 
-.form-error{
+.form-error {
     // min-height: max-content;
     // background-color: red;
     color: red;
-    padding-left:10px ;
+    padding-left: 10px;
     margin: 0;
 }
-
