--- a/client/src/pages/discover/rowMovieSearch.scss
+++ b/client/src/pages/discover/rowMovieSearch.scss
@@ -18,10 +18,10 @@
   }
 }
 
-.movieRow:hover {
-  transform: scale(1.09);
-  transition: 0.3s;
-}
+// .movieRow:hover {
+//   transform: scale(1.09);
+//   transition: 0.3s;
+// }
 
 .font-weight-bold {
   // background-color: red;
