--- a/client/src/component/postCard/postCard.scss
+++ b/client/src/component/postCard/postCard.scss
@@ -1,77 +1,65 @@
-    .postCard{
-
-        @media (max-width: 1100px) {
-            width: 60%;
-        }
-        @media (max-width: 550px) {
-            width: 70%;
-        }
-        @media (max-width: 400px) {
-            width: 90%;
-        }
-        background-color: #000101 ;
-        color: white;
-        width: 40%;
-        margin: 30px auto;
-        padding: 20px;
-        overflow: hidden;
-        border-radius: 10px;
-       
-        .level1{
-            display: flex;
-            justify-content: space-between;
-            .set1{
-                img{
-                    height: 60px;
-                    width: 60px;
-                    border-radius: 50%;
-                }
-            }
-            .set2{
-    
-            }
-        }
-
-
-        .level2{
-            p{
-                text-align: justify;
-            }
-        }
-
-        .level3{ 
-            img{
-                width: 100%;
-            }
-        }
-
-
-        .level4{
-            display: flex;
-        }
-
-
-        .level5{
-            margin: 20px 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            img{
-                height: 50px;
-                width: 50px;
-                border-radius: 50%;
-            }
-        }
+.postCard {
+  @media (max-width: 1100px) {
+    width: 60%;
+  }
+  @media (max-width: 550px) {
+    width: 70%;
+  }
+  @media (max-width: 400px) {
+    width: 90%;
+  }
+  background-color: #000101;
+  color: white;
+  width: 40%;
+  margin: 30px auto;
+  padding: 20px;
+  overflow: hidden;
+  border-radius: 10px;
+  border: 1px solid #28292a;
+  .level1 {
+    display: flex;
+    justify-content: space-between;
+    .set1 {
+      img {
+        height: 60px;
+        width: 60px;
+        border-radius: 50%;
+      }
     }
+    .set2 {
+    }
+  }
 
+  .level2 {
+    p {
+      text-align: justify;
+    }
+  }
 
+  .level3 {
+    img {
+      width: 100%;
+    }
+  }
 
+  .level4 {
+    display: flex;
+  }
 
-
-
-
+  .level5 {
+    margin: 20px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    img {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+    }
+  }
+}
 
 // Commons
-.cursor-pointer{
-    cursor: pointer;
+.cursor-pointer {
+  cursor: pointer;
 }
