--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -19,9 +19,11 @@
       border-radius: 10px;
       cursor: pointer;
     }
-    img:hover {
+    .lang {
+      transition: transform 0.3s ease-in-out;
+    }
+    .lang:hover {
       transform: scale(1.2);
-      transition: 0.3s;
       filter: brightness(60%);
     }
   }
