--- a/client/src/pages/home/homeMovieRow.scss
+++ b/client/src/pages/home/homeMovieRow.scss
@@ -10,6 +10,10 @@
 .posters::-webkit-scrollbar {
   display: none;
 }
+
+.posterDiv {
+  transition: transform 0.5s ease-in-out;
+}
 .poster {
   box-shadow: 6px 8px 8px rgba(0, 0, 0, 0.2);
   max-height: 250px;
@@ -17,12 +21,11 @@
   border-radius: 10px;
   cursor: pointer;
 }
-.poster:hover {
-  transform: scale(1.155);
-  transition: 0.5s;
-  margin: 0 15px;
-  filter: brightness(70%);
+
+.posterDiv:hover {
+  transform: scale(1.1);
 }
+
 .smallPoster {
   max-height: 100px;
 }
