--- a/client/src/pages/profile/profileTop.scss
+++ b/client/src/pages/profile/profileTop.scss
@@ -79,7 +79,9 @@
     // margin-left: 22%;
 
     font-weight: bold;
-    color: rgb(77, 74, 74);
+    background-color: #000101;
+
+    // color: rgb(77, 74, 74);
   }
   .username {
     @media (max-width: 1250px) {
@@ -94,17 +96,19 @@
     width: 70%;
     margin: auto;
     border-radius: 18px;
-    border: none;
+    border: 1px solid #28292a;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     div {
       border: 0;
       border-left: 1px;
-      border-color: white !important;
+      border-color: #28292a !important;
       border-style: solid;
     }
     .col {
-      background-color: #272727;
+      // background-color: #272727;
+      background-color: #000101;
+
       color: white;
       padding: 30px 0px;
       font-weight: bold;
@@ -116,7 +120,9 @@
       cursor: pointer;
     }
     .col:hover {
-      background-color: #3d3d3d;
+      // background-color: #3d3d3d;
+      background-color: #000101;
+
       transform: scale(1.2);
       transition: 0.4s;
     }
